# RAG-Textbook-System

./: .gitignore  README.md  pyproject.toml
src/: LLM_call_final.py  app.py  chunker.py  embedding.py  embeddings.py  latex_output.txt  main.py  openaicall.py  query.py  test.py  vector_storage.py
src/chunks/: chunk-0.txt  chunk-1.txt  chunk-10.txt  chunk-11.txt  chunk-2.txt  chunk-3.txt  chunk-4.txt  chunk-5.txt  chunk-6.txt  chunk-7.txt  chunk-8.txt  chunk-9.txt
src/final_query/: query.md  response.md
src/output_LLM/: output-0.md  output-0.tex  output-1.md  output-1.tex  output-2.md  output-2.tex  output-3.md  output-4.md  output-5.md  output-6.md  output-7.md
src/outputs/: all_text.md  macbeth_text_all_pages.txt  stat305_course_pack.txt
src/top_chunks/: 0.491242737.md  0.550101519.md  0.561383545.md  0.633508086.md
